--- a/src/app/bmx/components/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -12,7 +12,7 @@
             style="position: absolute;bottom: 10px;color: grey;z-index: 9999999999;right: 33px;outline: none;">
             <mat-icon class="full-icon" style="font-size: 35px;">qr_code
             </mat-icon>
-        </button> -->
+         </button> -->
             <button (click)="openFullscreen()" mat-icon-button matTooltip="design tools" matTooltipPosition="above"
                 *ngIf="true"
                 style="position: absolute;bottom: 9px;color: grey;z-index: 9999999999;right: -3px;outline: none;">
@@ -32,7 +32,8 @@
 
 
                 <!-- BRAND MATRIX MODULAR TEMPLATE COMPONENTS  🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀 -->
-                <div *ngFor="let bmxItem of bmxPagesClient[currentPage]?.page; let i = index" style="display: flex;flex-direction: column;align-content: center;">
+                <div *ngFor="let bmxItem of bmxPagesClient[currentPage]?.page; let i = index"
+                    style="display: flex;flex-direction: column;align-content: center;">
 
                     <div *ngIf="bmxItem.componentType === 'page-title'" class="paragraph">
                         <div class="emoji-handle">.</div>
@@ -82,8 +83,8 @@
                         <div *ngIf="showModalVideo" id="myModal" class="modal-video"
                             style="display: flex;flex-direction: column;gap: 2px;">
                             <!-- <label class="container-checkbox">Don't show again
-                            <input (click)="saveSelection()" type="checkbox" value="Bike" #modalChecked> 
-                            <span class="checkmark">&#x2714;</span>        
+                            <input (click)="saveSelection()" type="checkbox" value="Bike" #modalChecked>
+                            <span class="checkmark">&#x2714;</span>
                         </label> -->
                             <mat-checkbox #modalChecked (click)="saveSelection()"
                                 class="example-margin container-checkbox">Don't show again</mat-checkbox>
@@ -205,7 +206,7 @@
                         <!-- <div *ngIf="showModalVideo" id="myModal" class="modal-video" CV
                     style="display: flex;flex-direction: column;gap: 6px;">
                         <mat-checkbox (click)="saveSelection()" class="example-margin container-checkbox" >Don't show again</mat-checkbox>
-                    
+
                         <div class="modal-content">
                             <img *ngFor="let path of VIDEO_PATH" [src]="path" alt="Girl in a jacket">
                         </div>
@@ -312,8 +313,8 @@
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 999;    
-    width: 465px;animation: 
+    z-index: 999;
+    width: 465px;animation:
     fadeIn 3s ease 4s forwards;" slot="end" autoplay loop [src]="'assets/img/cubo.json'">
 </lottie-player>
 <lottie-player class="lottie-player" *ngIf="loadingLottie" style="
@@ -321,7 +322,7 @@
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 999;    
-    width: 70px;animation: 
+    z-index: 999;
+    width: 70px;animation:
     fadeIn 3s ease 4s forwards;" slot="end" autoplay loop [src]="'assets/img/esfera.json'">
 </lottie-player> -->
