--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
@@ -1,8 +1,8 @@
 <div *ngIf="showCreationModalVideo && bmxClientPageOverview" id="myModal" class="modal-video"
     style="display: flex;flex-direction: column;gap: 2px;">
     <!-- <label class="container-checkbox">Don't show again
-        <input (click)="saveSelection()" type="checkbox" value="Bike" #modalChecked> 
-        <span class="checkmark">&#x2714;</span>        
+        <input (click)="saveSelection()" type="checkbox" value="Bike" #modalChecked>
+        <span class="checkmark">&#x2714;</span>
     </label> -->
     <div class="modal-content">
         <video src='{{CREATION_VIDEO_PATH}}' controls></video>
@@ -123,7 +123,7 @@
                 matTooltipPosition="above" mat-icon-button aria-label="ranking">
                 <mat-icon style="font-size: 26px;" class="full-icon">radio_button_checked</mat-icon>
             </button> -->
-        
+
             <button (click)="insertRow(); editSingleTableCells = false" class="add-column" matTooltip="insert row" matTooltipPosition="above"
                 mat-icon-button aria-label="ranking">
                 <mat-icon style="font-size: 26px;" class="full-icon">vertical_distribute</mat-icon>
@@ -132,7 +132,7 @@
                 matTooltip="drag rows" matTooltipPosition="above" mat-icon-button aria-label="ranking">
                 <mat-icon style="font-size: 26px;" class="full-icon">drag_indicator</mat-icon>
             </button>
-        
+
             <button (click)="editSingleTableCells = !editSingleTableCells"
                 [ngClass]="(!editSingleTableCells)?'add-column':'add-column-active'" matTooltip="edit table cells"
                 matTooltipPosition="above" mat-icon-button aria-label="ranking">
@@ -153,11 +153,11 @@
             matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;    z-index: 9;" class="full-icon">swap_horizontal_circle</mat-icon>
         </button>
-        <button (click)="selectedIndex = i; editSingleTableCells = false" class="add-column" matTooltip="insert test names"
+        <button (click)="selectedIndex = i; editSingleTableCells = false" class="add-column" matTooltip="Setup settings"
                 matTooltipPosition="above" *ngIf="i !== selectedIndex" mat-icon-button>
                 <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
         </button>
-       
+
     </div>
 </div>
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  END  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
@@ -331,7 +331,7 @@
                             [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight"
                             style="text-align: initial;height: 32px;width: 358px;font-size: 16px;border: 1px solid grey;padding: 6px 10px;"
                             class="row-box" [(ngModel)]="testName[columnName]" rows="4" cols="50"></textarea> -->
-                            
+
                         <!-- add on blur -->
                         <textarea *ngIf="y !== 0  && columnName.includes('Answers') == true"
                             [style.width]="(bmxItem.componentSettings[0].columnWidth - 20) +'px'"
