--- a/src/app/bmx/components/project-list/project-list.component.scss
+++ b/src/app/bmx/components/project-list/project-list.component.scss
@@ -1,4 +1,5 @@
-
-::ng-deep .mat-calendar-body-selected {
-  background-color: #00ff00 !important;
+/* Global styles.css or component's css with encapsulation set to None */
+.mat-calendar-body-selected {
+  // background-color: #fff !important;
+  color: #fff !important;
 }
