--- a/src/app/bmx/bmx-creator/participants-email/participants-email.component.html
+++ b/src/app/bmx/bmx-creator/participants-email/participants-email.component.html
@@ -155,7 +155,7 @@
                             [indeterminate]="selection.hasValue() && !isAllSelected()">
                         </mat-checkbox>
                     </th>
-                    <td mat-cell *matCellDef="let row">
+                    <td mat-cell *matCellDef="let row" style="padding-right: 15px;">
                         <mat-checkbox (click)="$event.stopPropagation()"
                             (change)="$event ? selection.toggle(row) : null"
                             (change)="$event ? selectRow($event, row) : null" [checked]="selection.isSelected(row)">
