--- a/src/app/bmx/components/participants-email/participants-email.component.html
+++ b/src/app/bmx/components/participants-email/participants-email.component.html
@@ -156,7 +156,7 @@
                             [indeterminate]="selection.hasValue() && !isAllSelected()">
                         </mat-checkbox>
                     </th>
-                    <td mat-cell *matCellDef="let row">
+                    <td mat-cell *matCellDef="let row"  style="padding-right: 15px;">
                         <mat-checkbox style="  margin-top: 9px;" (click)="$event.stopPropagation()"
                             (change)="$event ? selection.toggle(row) : null"
                             (change)="$event ? selectRow($event, row) : null" [checked]="selection.isSelected(row)">
