--- a/src/app/bmx/components/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -52,7 +52,7 @@
                     <!-- BMX HEADER 😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋 -->
 
                     <div *ngIf="bmxItem.componentType === 'logo-header'">
-                        <app-logo-header [isBrandMatrixSurvey]="isBrandMatrixSurvey" [bmxItem]="bmxItem" [i]="i"
+                        <app-logo-header [isBrandMatrixSurvey]="isBrandMatrixSurvey" [creationMode]="true" [bmxItem]="bmxItem" [i]="i"
                             [bmxClientPageDesignMode]="bmxClientPageDesignMode"
                             [bmxClientPageOverview]="bmxClientPageOverview"></app-logo-header>
                     </div>
