--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank/image-rank.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank/image-rank.component.html
@@ -142,7 +142,7 @@
         </button>
 
         <button (click)="selectedIndex = i;editSingleTableCells = false; verifyCritera()" class="add-column"
-            matTooltip="insert test names" matTooltipPosition="above" *ngIf="i !== selectedIndex" mat-icon-button>
+            matTooltip="Setup settings" matTooltipPosition="above" *ngIf="i !== selectedIndex" mat-icon-button>
             <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
         </button>
 
@@ -155,7 +155,7 @@
 
 <!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 CONFIG BOX 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
 <div *ngIf="i === selectedIndex" class="mat-elevation-z4" cdkDrag
-    style="position: absolute;width: 62vw;background: #fafafa;z-index: 1;top: -8px;left: 15%;border: lightgrey 3px solid;">
+    style="position: absolute;width: 62vw;background: #fafafa;z-index: 1;top: -8px;left: 15%;border: #063074 4px solid;">
     <div style="position: absolute;
     top: 10px;
     right: 10px;
@@ -460,14 +460,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                                 matTooltipPosition="above" (dblclick)="deleteColumn(columnName)">x</span>
                             <mat-icon style="cursor: pointer;" (click)="swapColumns(e)">chevron_right</mat-icon>
 
-                            <mat-icon style="cursor: pointer;" (click)="columnFontSizeAdjust(columnName, 'decrease')">
-                                remove</mat-icon>
-
-                            <mat-icon style="cursor: pointer;">text_format</mat-icon>
-
-                            <mat-icon style="cursor: pointer;" (click)="columnFontSizeAdjust(columnName, 'increase')">
-                                add</mat-icon>
-                        </div>
+                   
                     </div>
 
                     <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 END HEADER TEXT AREA  🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
