--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
@@ -53,7 +53,7 @@
             *ngIf="i !== selectedIndex" mat-icon-button>
             <mat-icon style="font-size: 25px;" class="full-icon"> text_fields</mat-icon>
         </button>
-        <button (click)="selectedIndex = i; verifyCritera() " class="add-column" matTooltip="insert test names"
+        <button (click)="selectedIndex = i; verifyCritera() " class="add-column" matTooltip="Setup settings"
             matTooltipPosition="above" *ngIf="i !== selectedIndex" mat-icon-button>
             <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
         </button>
@@ -64,7 +64,7 @@
 
 
 <!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 CONFIG BOX 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
-<div *ngIf="i === selectedIndex" class="mat-elevation-z4" cdkDrag style="position: absolute;width: 50%;background: #fafafa;z-index: 1;top: -65px;left: 25%;border: lightgrey 3px solid; overflow: auto;
+<div *ngIf="i === selectedIndex" class="mat-elevation-z4" cdkDrag style="position: absolute;width: 50%;background: #fafafa;z-index: 1;top: -65px;left: 25%;border: #063074 4px solid; overflow: auto;
        max-height: 36rem;
     bottom: -2; ">
 
@@ -210,7 +210,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
 
         <div style="display: flex;flex-direction: row;gap: 20px; align-items: center;width: 750px;">
 
-            <mat-icon (click)="moveleft(bmxItem.componentText[testNameIndex].nameCandidates)"
+            <mat-icon (click)="moveleft()"
                 style="font-size: 30px;color: grey;cursor: pointer;" class="full-icon">
                 chevron_left</mat-icon>
 
@@ -271,13 +271,13 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
 
             </div>
             <mat-icon *ngIf="survey==false; else isSurvey"
-                (click)="moveRight(bmxItem.componentText[testNameIndex].nameCandidates)"
+                (click)="moveRight()"
                 style="font-size: 30px;color: grey;cursor: pointer;" class="full-icon">
                 chevron_right
             </mat-icon>
             <ng-template #isSurvey>
                 <mat-icon *ngIf="hasVoted; else noHasVoted"
-                    (click)="moveRight(bmxItem.componentText[testNameIndex].nameCandidates)"
+                    (click)="moveRight()"
                     style="font-size: 30px;color: grey;cursor: pointer;" class="full-icon">
                     chevron_right
                 </mat-icon>
@@ -324,7 +324,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                 <div *ngIf="!ranking" style="display: flex;flex-direction:row;justify-content: space-around;align-items: center;width: 100%;position: relative;
                 bottom: 15px;">
 
-                    <mat-icon (click)="moveleft(bmxItem.componentText[testNameIndex].nameCandidates)"
+                    <mat-icon (click)="moveleft()"
                         style="font-size: 30px;color: grey;cursor: pointer;">
                         chevron_left
                     </mat-icon>
@@ -341,13 +341,13 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                     </div>
 
                     <mat-icon *ngIf="survey==false; else isSurvey"
-                        (click)="moveRight(bmxItem.componentText[testNameIndex].nameCandidates)"
+                        (click)="moveRight()"
                         style="font-size: 30px;color: grey;cursor: pointer;">
                         chevron_right
                     </mat-icon>
                     <ng-template #isSurvey>
                         <mat-icon *ngIf="hasVoted; else noHasVoted"
-                            (click)="moveRight(bmxItem.componentText[testNameIndex].nameCandidates)"
+                            (click)="moveRight()"
                             style="font-size: 30px;color: grey;cursor: pointer;" class="full-icon">
                             chevron_right
                         </mat-icon>
@@ -363,19 +363,19 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                     style="display: flex;flex-direction:column;justify-content: center;align-items: center;gap: 30px;">
 
                     <div style="width: 100%;display: flex;justify-content: space-around">
-                        <mat-icon (click)="moveleft(bmxItem.componentText[testNameIndex].nameCandidates)"
+                        <mat-icon (click)="moveleft()"
                             style="font-size: 30px;color: grey;cursor: pointer;">
                             chevron_left
                         </mat-icon>
 
                         <mat-icon *ngIf="survey==false; else isSurvey"
-                            (click)="moveRight(bmxItem.componentText[testNameIndex].nameCandidates)"
+                            (click)="moveRight()"
                             style="font-size: 30px;color: grey;cursor: pointer;">
                             chevron_right
                         </mat-icon>
                         <ng-template #isSurvey>
                             <mat-icon *ngIf="hasVoted; else noHasVoted"
-                                (click)="moveRight(bmxItem.componentText[testNameIndex].nameCandidates)"
+                                (click)="moveRight()"
                                 style="font-size: 30px;color: grey;cursor: pointer;" class="full-icon">
                                 chevron_right
                             </mat-icon>
@@ -422,7 +422,9 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                 <ng-container matColumnDef="nameCandidates">
                     <th mat-header-cell *matHeaderCellDef> Name Candidates</th>
                     <td mat-cell *matCellDef="let element"><input type="text" matInput
-                            [(ngModel)]="element.nameCandidates" ></td>
+                            [(ngModel)]="element.nameCandidates" [value]="element.nameCandidates">
+                        </td>
+
                 </ng-container>
                 <ng-container matColumnDef="rationale">
                     <th mat-header-cell *matHeaderCellDef> Rationales</th>
@@ -439,8 +441,8 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
             </table>
             <div class="content-button" style="width: 100%; display: flex; justify-content: space-between;">
                 <button mat-button *ngIf="!showNewInput"
-                    (click)="showModalAddRow = true; showModalTable = false"><mat-icon>add_box</mat-icon></button>
-                <button mat-button (click)="showModalTable = false">Save</button>
+                    (click)="showModalAddRow = true; showModalTable = false;  newCandidate.nameCandidates = 'TEST NAMES'; newCandidate.rationale = 'Rationale of an undisclosed length'"><mat-icon>add_box</mat-icon></button>
+                <button mat-button (click)="showModalTable = false;">Save</button>
             </div>
 
         </div>
