FIxed tinder component

--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
@@ -267,7 +267,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                     </div>
                 </div>
 
-                <button mat-raised-button (click)="resetVotes()">Reset Votes</button>
+                <button mat-raised-button (click)="resetVotes()" style="margin-top: 16px;">Reset Votes</button>
 
             </div>
             <mat-icon *ngIf="survey==false; else isSurvey"
