--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
@@ -326,7 +326,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                 <div>
                     <div
                         style="display: flex;flex-direction: column;justify-content:center;gap: 10px;align-items: center;">
-                        <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">Maximun:
+                        <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">Maximum:
                             {{bmxItem.componentSettings[0].maxRule}}</div>
                         <input type="number" min="0" [max]="rowsCount"
                             [(ngModel)]="bmxItem.componentSettings[0].maxRule" style="width:53px; padding: 0px 10px;"
@@ -506,7 +506,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                                     (dblclick)="openDialog('delete column', columnName)">x</span>
                                 <mat-icon style="cursor: pointer;" (click)="swapColumns(e)">chevron_right</mat-icon>
 
-                        
+
                             </div>
                         </div>
                     </div>
