--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
@@ -224,7 +224,7 @@
             <div style="font-size: 16px;color: #48535e;">MIN number  of selections to vote on</div>
 
           <div style="display: flex;flex-direction: column;justify-content:center;gap: 10px;align-items: center;">
-              <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">Maximun:
+              <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">Maximum:
                   {{bmxItem.componentSettings[0].maxRule}}</div>
               <input type="range" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].maxRule"
                   style="width:120px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].maxRule">
@@ -573,7 +573,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
         </div>
         <div>
             <div style="display: flex;flex-direction: column;justify-content:center;gap: 10px;align-items: center;">
-                <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">Maximun:
+                <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">Maximum:
                     {{bmxItem.componentSettings[0].maxRule}}</div>
                 <input type="number" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].maxRule"
                     style="width:53px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].maxRule">
@@ -661,7 +661,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                             <mat-icon *ngIf="selectedColumn === e && bmxClientPageOverview" style="cursor: pointer;"
                                 (click)="swapColumns(e)">chevron_right</mat-icon>
 
-                   
+
                         </div>
                     </div>
                     <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 END HEADER TEXT AREA  🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
