--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -53,7 +53,7 @@
                 min="50" max="600" [value]="bmxItem.componentSettings[0].rationalewidth">
         </div>
 
-   
+
 
         <!-- COMMENTS -->
         <div style="display: flex;flex-direction: column;align-items: center;">
@@ -343,7 +343,7 @@
                 <div>
                     <div
                         style="display: flex;flex-direction: column;justify-content:center;gap: 10px;align-items: center;">
-                        <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;"> Maximun:
+                        <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;"> Maximum:
                             {{bmxItem.componentSettings[0].maxRule}}
                         </div>
                         <input type="number" min="0" [max]="rowsCount"
@@ -491,7 +491,7 @@
                                 matTooltipPosition="above" (dblclick)="openDialog('delete column', columnName)">x</span>
                             <mat-icon style="cursor: pointer;" (click)="swapColumns(e)">chevron_right</mat-icon>
 
-                        
+
                         </div>
                     </div>
 
@@ -655,7 +655,7 @@
                                 matTooltipPosition="above" (dblclick)="openDialog('delete column', columnName)">x</span>
                             <mat-icon style="cursor: pointer;" (click)="swapColumns(e)">chevron_right</mat-icon>
 
-                         
+
                         </div>
                     </div>
 
